- fix for fogbugz case 218 - added new logo - updated new logo in html - cleaned up css - center aligned signup div

--- a/src/components/Signup/Signup.less
+++ b/src/components/Signup/Signup.less
@@ -1,100 +1,251 @@
-.sportsbg{
- background: -webkit-linear-gradient(#094B88  , #00152A  );
- background: linear-gradient(#094B88  , #00152A  );
- background: url(../../assets/images/sports-background.png);
- background-size: cover;
- overflow: auto;
+.signupBackground {
+  background: -webkit-linear-gradient(#094B88 , #00152A );
+  background: linear-gradient(#094B88 , #00152A );
+  background: url("../../assets/images/sports-background.png");
+  background-size: cover;
+  overflow: auto;
+  height: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
-.registerComponent{
-  h2{
+
+.registerComponent {
+  h2 {
     font-size: 20px;
-    font-weight:bold;
+    font-weight: bold;
   }
-  .wrapper{
-    padding:50px 0;
+
+  .wrapper {
+    padding: 50px 0;
   }
-  .center-ele{
-    width:600px;
-    margin:0 auto;
+
+  .logo {
+    margin-bottom: 27px;
   }
-  .btn{
-    width:334px;
+  .center-ele {
+    width: 600px;
+    margin: 0 auto;
+  }
+
+  .btn {
+    width: 334px;
     text-align: center;
-    padding:0;
+    padding: 0;
   }
-  .text-center {text-align: center}
-  .form-fields{
-    margin-bottom:30px;
+
+  .text-center {
+    text-align: center;
   }
-  .less-margin{
-    margin-bottom:10px;
+
+  .form-fields {
+    margin-bottom: 30px;
   }
-  input{
-    width:100%;
+
+  .less-margin {
+    margin-bottom: 10px;
   }
-  .copy-btn{
-    width:auto;
+
+  .copy-btn {
+    width: auto;
     position: absolute;
-    top:0;
-    right:0;
-    padding:0 10px;
+    top: 0;
+    right: 0;
+    padding: 0 10px;
   }
-  form input[type="checkbox"]{
+
+  form input[type="checkbox"] {
     float: left;
     height: 18px;
   }
 
-  label{
-    font-size:16px;
-    margin-left:5px;
+  label {
+    font-size: 16px;
+    margin-left: 5px;
     vertical-align: middle;
   }
-  .download-file{
-    border:1px solid #FFFFFF;
-    padding:20px 10px;
+
+  .download-file {
+    border: 1px solid #FFFFFF;
+    padding: 20px 10px;
     text-align: left;
   }
-  .blue-text{
+
+  .blue-text {
     color: #2FA5E6;
   }
+
   .errorText {
     color: #FF7788;
     float: left;
-    font-size:12px;
+    font-size: 12px;
   }
-  .float-left {float: left}
-  .float-right {float: right}
-  .float-center {margin: 0 auto}
-  .text-left {text-align: left}
-  .text-right {text-align: right}
-  .text-center {text-align: center}
-  .pos-abs{position: absolute}
-  .pos-rel{position: relative}
-  .margin-lr-10{  margin:0 10px;}
-  .margin-tb-25{  margin:25px 0 10px 0;}
-  .margin-btm-20{  margin-bottom:20px;}
-  .margin-top-25{margin-top:25px;}
-  a{  color: #ffffff;  }
-  .align-checkbox label {font-size: 13px; width: 235px;float: left; }
-  .font15 {font-size: 15px}
-  .font16 {font-size: 16px}
-  .font18 {font-size: 18px}
-  .uppercase{text-transform: uppercase}
-  .underline{  text-decoration: underline;  }
-  .border-radius-2{  border-radius:2px;  } // for styling button with slightly 2px curve
-  .page-title {  font-size: 18px;  text-transform: uppercase;  font-weight:300;  } // used in My-wager, My account
-  .font20{font-size:20px;}
-  input{  height: 36px;  line-height:36px;  border-radius:2px;  padding:0 10px;  border:0 none; -webkit-box-shadow: none;  color: #333; display:block; &:focus{  outline:none;  } }
-  .btn-regular{  background-image: linear-gradient(-180deg, rgba(55,192,255,0.92) 2%, #1F6CB4 97%);  box-shadow: 0 2px 3px 0 #0D3B7B, inset 1px 2px 0 0 rgba(248,235,218,0.43); cursor:pointer; }
-  .btn-regular-disabled{  background-image: linear-gradient(-180deg, rgba(23,102,162,0.92) 4%, #134E85  97%);
-      box-shadow: 0px 2px 3px 0px #0D3B7B , inset 1px 2px 0px 0px rgba(248,235,218,0.43);cursor:not-allowed; }
-  .btn {  text-transform: uppercase;  display: inline-block;  color: #ffffff;  font-weight:500; height: 36px;  line-height: 36px;  border-radius: 0; border: 0 none;  font-size: 18px;  }
-  .cancel-btn {  background-image: linear-gradient(-180deg, rgba(23, 102, 162, 0.92) 4%, #134E85 97%);  box-shadow: 0 2px 3px 0 #0D3B7B, inset 1px 2px 0 0 rgba(248, 235, 218, 0.43);  }
-  .btn-green{background-image: linear-gradient(-180deg, #1ACBB4 20%, #03787B 97%);  box-shadow: 0 2px 3px 0 #0D3B7B, inset 1px 2px 0 0 rgba(248,235,218,0.43); }
-  .btn-green-disabled{  background-image: linear-gradient(-180deg, rgba(23,102,162,0.92) 4%, #134E85  50%);
-      box-shadow: 0px 2px 3px 0px #0D3B7B , inset 1px 2px 0px 0px rgba(248,235,218,0.43);cursor:not-allowed;  }
-  .btn-green-disabled:hover{color:#fff;}
-  .center-div{display: table;margin:0 auto;}
-  .width260 {width:260px; }
-  ::-webkit-input-placeholder,.rw-input {color: #4A4A4A;}
+
+  .float-left {
+    float: left;
+  }
+
+  .float-right {
+    float: right;
+  }
+
+  .float-center {
+    margin: 0 auto;
+  }
+
+  .text-left {
+    text-align: left;
+  }
+
+  .text-right {
+    text-align: right;
+  }
+
+  .text-center {
+    text-align: center;
+  }
+
+  .pos-abs {
+    position: absolute;
+  }
+
+  .pos-rel {
+    position: relative;
+  }
+
+  .margin-lr-10 {
+    margin: 0 10px;
+  }
+
+  .margin-tb-25 {
+    margin: 25px 0 10px;
+  }
+
+  .margin-btm-20 {
+    margin-bottom: 20px;
+  }
+
+  .margin-top-25 {
+    margin-top: 25px;
+  }
+
+  a {
+    color: #ffffff;
+  }
+
+  .align-checkbox label {
+    font-size: 13px;
+    width: 235px;
+    float: left;
+  }
+
+  .font15 {
+    font-size: 15px;
+  }
+
+  .font16 {
+    font-size: 16px;
+  }
+
+  .font18 {
+    font-size: 18px;
+  }
+
+  .uppercase {
+    text-transform: uppercase;
+  }
+
+  .underline {
+    text-decoration: underline;
+  }
+
+  .border-radius-2 {
+    border-radius: 2px;
+  }
+  // for styling button with slightly 2px curve
+
+  .page-title {
+    font-size: 18px;
+    text-transform: uppercase;
+    font-weight: 300;
+  }
+  // used in My-wager, My account
+
+  .font20 {
+    font-size: 20px;
+  }
+
+  input {
+    height: 36px;
+    width: 100%;
+    line-height: 36px;
+    border-radius: 2px;
+    padding: 0 10px;
+    border: 0 none;
+    -webkit-box-shadow: none;
+    color: #333;
+    display: block;
+
+    &:focus {
+      outline: none;
+    }
+  }
+
+  .btn-regular {
+    background-image: linear-gradient(-180deg, rgba(55,192,255,0.92) 2%, #1F6CB4 97%);
+    box-shadow: 0 2px 3px 0 #0D3B7B, inset 1px 2px 0 0 rgba(248,235,218,0.43);
+    cursor: pointer;
+  }
+
+  .btn-regular-disabled {
+    background-image: linear-gradient(-180deg, rgba(23,102,162,0.92) 4%, #134E85 97%);
+    box-shadow: 0 2px 3px 0 #0D3B7B , inset 1px 2px 0 0 rgba(248,235,218,0.43);
+    cursor: not-allowed;
+  }
+
+  .btn {
+    text-transform: uppercase;
+    display: inline-block;
+    color: #ffffff;
+    font-weight: 500;
+    height: 36px;
+    line-height: 36px;
+    border-radius: 0;
+    border: 0 none;
+    font-size: 18px;
+  }
+
+  .cancel-btn {
+    background-image: linear-gradient(-180deg, rgba(23, 102, 162, 0.92) 4%, #134E85 97%);
+    box-shadow: 0 2px 3px 0 #0D3B7B, inset 1px 2px 0 0 rgba(248, 235, 218, 0.43);
+  }
+
+  .btn-green {
+    background-image: linear-gradient(-180deg, #1ACBB4 20%, #03787B 97%);
+    box-shadow: 0 2px 3px 0 #0D3B7B, inset 1px 2px 0 0 rgba(248,235,218,0.43);
+  }
+
+  .btn-green-disabled {
+    background-image: linear-gradient(-180deg, rgba(23,102,162,0.92) 4%, #134E85 50%);
+    box-shadow: 0 2px 3px 0 #0D3B7B , inset 1px 2px 0 0 rgba(248,235,218,0.43);
+    cursor: not-allowed;
+  }
+
+  .btn-green-disabled:hover {
+    color: #fff;
+  }
+
+  .center-div {
+    display: table;
+    margin: 0 auto;
+  }
+
+  .width260 {
+    width: 260px;
+  }
+
+  .rw-input,
+  ::-webkit-input-placeholder {
+    color: #4A4A4A;
+  }
 }
